# sound_meter

./: .gitignore  CMakeLists.txt  makefile  readme.md  sound_meter.conf  sound_meter_config.json
docs/: conf.py  conteudo.rst  index.rst
src/: FilterCoefs_48000.h  audit.c  audit.h  config.c  config.h  filter.c  filter.h  in_out.c  in_out.h  main.c  mqtt.c  mqtt.h  process.c  process.h  ring.c  ring.h  sbuffer.c  sbuffer.h  server.c  server.h
tests/: TestNoise.wav.csv.ref  cli_levels.c  sound_meter_config.json  sound_meter_config_test.json  sound_meter_test.conf  test.sh  test_2.sh
